adding unit tests

--- a/index.html
+++ b/index.html
@@ -5,16 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="index.css" />
 	<script src="lib/jquery.js"></script>
 	<script src="lib/svg.js"></script>
-	<script src="src/Game.js"></script>
-	<script src="src/Hex.js"></script>
-	<script src="src/Board.js"></script>
-	<script src="src/factories/_Factory.js"></script>
-	<script src="src/factories/Belt.js"></script>
-	<script src="src/factories/Buffer.js"></script>
-	<script src="src/factories/Builder.js"></script>
-	<script src="src/factories/Empty.js"></script>
-	<script src="src/factories/Generator.js"></script>
-	<script src="src/Ball.js"></script>
+	<script>var module = {};</script>
+	<script src="res/bundle.js"></script>
 	<script src="index.js"></script>
 </head>
 <body style="background: #f0f2f5;">
